Fixed help flyout sizing issues on small screens

--- a/src/ui/panels/helppanel.minimal.css
+++ b/src/ui/panels/helppanel.minimal.css
@@ -2,16 +2,22 @@
    In dark mode the help-paper isn't shown, so no need to worry about colors. */
 
 .help-parent {
+  display: flex;
   box-sizing: content-box;
   margin: 0;
   padding: 0;
   height: auto;
   width: auto;
-  max-width: 600px;
+  max-width: 384px;
+  max-height: 75vh;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
 }
 
 .help-paper {
   position: relative;
+  width: 100%;
+  height: 100%;
   background-color: #f0f0f0;
   background-image:
     repeating-linear-gradient(to bottom,
